# ReadmeVaultCross

./: .gitignore  README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: github.ts  markdown.ts  store.ts  types.ts
src/lib/components/: AboutModal.svelte  HelpModal.svelte  ImportBulkGitHub.svelte  ImportGitHub.svelte  ProjectDetail.svelte  ProjectForm.svelte  SettingsModal.svelte  Sidebar.svelte  UpdaterModal.svelte
